--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: java
 install: true
 
 jdk: oraclejdk8
- 
-script: ./gradlew build -s
+
+before_install:
+ - chmod +x gradlew
+
+script: 
+./gradlew build -s
 
