--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ install: true
 
 jdk: oraclejdk8
 
-before_install:
- - chmod +x gradlew
+before_script: - chmod +x gradlew
 
 script: 
 ./gradlew build -s
