--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ install: true
 
 jdk: oraclejdk8
 
-before_script:
- - chmod +x gradlew
+before_script: chmod +x gradlew
 
 script: ./gradlew build -s
